# ytdlp-gui

./: .gitignore  AGENTS.md  CLAUDE.md  ERRORS.md  GUI_AUDIT.md  GUI_FIX_PROMPT.md  Instagram Reel URL Extractor-1.2.user.js  MEMORY.md  README.md  RedGifs URL Extractor + Download-1.0.user.js  Research-Handoff-GPT.5.4-Pro.md  SESSION.md  SESSIONS.md  UI_REDESIGN_FINAL_PLAN.md  digital-obsidian-redesign-plan.md  gpt.md  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  ytdlp_gui.spec
.github/: copilot-instructions.md
data/: trim_quick_session.json
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_PLAYWRIGHT.md  BUILD_RELEASE.md  BUILD_TEST_RUN.md  CONFIG.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_MODELS.md  DECISIONS.md  DEPENDENCIES.md  GLOSSARY.md  INDEX.md  ISSUES_DEBT.md  MODULES.md  README.md  SETTINGS.md  TESTING.md  TROUBLESHOOTING.md  Trim-Editor.md  UI_WORKBENCH.md  ytdlp-research.md
src/: main.py
tests/: conftest.py  test_activity_drawer.py  test_add_urls_page.py  test_auth_domain_suffix.py  test_auth_worker.py  test_config_bar.py  test_config_service.py  test_conversion_manager.py  test_convert_page.py  test_convert_saved_task.py  test_convert_tab_widget.py  test_data_panel.py  test_drop_overlay.py  test_editor_models.py  test_export_planner.py  test_extract_urls_page.py  test_ffmpeg_utils.py  test_ffmpeg_worker.py  test_folder_scan_worker.py  test_icons.py  test_log_feed.py  test_main_window_workbench.py  test_match_page.py  test_match_scan_worker.py  test_match_tab_widget.py  test_metadata_page.py  (+23 more)
(+138 files in other folders)
