[project]
name = "ytdlp-gui"
version = "1.0.0"
description = "Cross-platform GUI for yt-dlp video downloader"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "User"}
]
keywords = ["yt-dlp", "youtube", "downloader", "gui", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PyQt6>=6.6.0",
    "yt-dlp>=2024.1.0",
    "send2trash>=1.8.0",
    "playwright>=1.40.0",
    "python-mpv>=1.0.8",
    "superqt>=0.6.0",
    "qtawesome>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
ytdlp-gui = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
